[gd_scene load_steps=14 format=4 uid="uid://b3atgcxkd78m4"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_vpipe"]
[ext_resource type="Script" uid="uid://72c3ho1ye2jq" path="res://Scripts/Farmland/Tools/Scissors.gd" id="2_2idro"]
[ext_resource type="PackedScene" uid="uid://bifc1qq7l3172" path="res://Models/Tools/Scissors.blend" id="3_lhxqj"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="5_3ej3m"]
[ext_resource type="Script" uid="uid://fx3fyvoqoyr8" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="6_v7xbm"]
[ext_resource type="Material" uid="uid://cq1x3i8pni2ak" path="res://Materials/Outline/pickup_outline.tres" id="7_2xj1y"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="8_mhrvu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5js1x"]
size = Vector3(0.0935059, 0.0178223, 0.118164)

[sub_resource type="GDScript" id="GDScript_2b8bq"]
script/source = "extends MeshInstance3D

@export var hightlight : Node3D

func _on_visibility_changed():
	hightlight.visible = visible
"

[sub_resource type="GDScript" id="GDScript_hqj23"]
script/source = "extends MeshInstance3D

@export var hightlight : Node3D

func _on_visibility_changed():
	hightlight.visible = visible
"

[sub_resource type="BoxShape3D" id="BoxShape3D_opagy"]
size = Vector3(0.109375, 0.0478516, 0.117363)

[sub_resource type="ArrayMesh" id="ArrayMesh_nt516"]
_surfaces = [{
"aabb": AABB(-0.0798096, -0.0190161, -0.0934459, 0.159619, 0.041313, 0.200495),
"attribute_data": PackedByteArray("q/8qP5r/GT+n/yY/m/8aP5VlFT+rsyo/q/8qP6f/Jj+VYBU/uOU3P8I9Qj+SlxE/lWAVP7jfNz+V5BQ/uTw5P6f/Jj+a/xk/q/8qP5v/Gj+VZRU/q7MqP6f/Jj+d/xw/mqMZP6k9KT+r/yo/mv8ZP6v/Kj+l/yQ/msUZP7WRND+awBk/tYc0P5rAGT+1hzQ/msUZP7WRND+r/yo/pf8kP6v/Kj+d/xw/mqMZP6k9KT+n/yY/mv8ZP6f/Jj+l/yQ/msAZP7WHND+awBk/tYc0P5rAGT+1jTQ/msAZP7WNND+n/yY/pf8kP6f/Jj+n/yY/lWAVP7jlNz/CPUI/jYYMP5VgFT+43zc/lWAVP7jlNz+VYBU/uOU3P5gbGD+5lzg/mBsYP7mXOD+YGxg/uZc4P5gbGD+5lzg/vBU8P43qDD+WcBY/vbc8P5YGFj+7Yjs/lgYWP7tiOz+WcBY/vbc8P5ZwFj+9tzw/lgYWP7tiOz+WBhY/u2I7P5ZwFj+9tzw/vBU8P43qDD+W7xU/wS9BP5bvFT/BL0E/w29DP405DT+1XDU/jTkNP5WDFD+4/Dc/wTdBP47RDT/BN0E/jtENP5L8ET+5nTg/kvwRP7mdOD+5/zg/iv8JP7n/OD+K/wk/lEkUP73cPD+USRQ/vdw8P7b/NT+K/wk/wP8/P4r/CT+UPRQ/wIE/P5Q9FD/AgT8/vP87P4r/CT+S8BE/uzs7P5LwET+7Ozs/v/8+P4r/CT+5/zg/jP8LP7n/OD+M/ws/lEkUP73cPD+USRQ/vdw8P7b/NT+M/ws/wP8/P4z/Cz+UPRQ/wIE/P5Q9FD/AgT8/vP87P4z/Cz+S8BE/uzs7P5LwET+7Ozs/v/8+P4z/Cz+8FTw/kUoRP5ZwFj+9tzw/lgYWP7tiOz+WBhY/u2I7P5bqFT+++D0/luoVP774PT+WBhY/u2I7P5YGFj+7Yjs/lnAWP723PD+8FTw/kUoRP5WDFD+4/Dc/wTdBP5BiED/BN0E/kGIQP5L8ET+5nTg/kvwRP7mdOD+W7xU/wS9BP5bvFT/BL0E/w29DP5H6ED+1XDU/kfoQP7TNMz+QYhA/kskRP8SqQz+SyRE/xKpDP71vPT+QYhA/ub84P5BiED+5vzg/kGIQP40ADT/B0EA/vf88P4z/Cz+S1RE/wQxBP5LVET/BDEE/tf80P4z/Cz+0zTM/jtENP5LJET/EqkM/kskRP8SqQz+9bz0/jtENP7m/OD+O0Q0/ub84P47RDT+NAA0/wdBAP73/PD+K/wk/ktURP8EMQT+S1RE/wQxBP7X/ND+K/wk/j3sPP79rPz+4/zc/iv8JP7j/Nz+K/wk/kIcPP73GPD+7/zo/iv8JP7v/Oj+K/wk/j3sPP79rPz+4/zc/jP8LP7j/Nz+M/ws/kIcPP73GPD+7/zo/jP8LP7v/Oj+M/ws/v1M/P5BiED+7gzo/kGIQP40ZDT+7Sjs/v1M/P47RDT+7gzo/jtENP40ZDT+7Sjs/lWUVP6uzKj+n/yY/m/8aP6v/Kj+a/xk/leQUP7k8OT+VYBU/uN83P8I9Qj+SlxE/lWAVP7jlNz+r/yo/p/8mP5VlFT+rsyo/q/8qP5v/Gj+n/yY/mv8ZP6v/Kj+a/xk/mqMZP6k9KT+n/yY/nf8cP6f/Jj+a/xk/mqMZP6k9KT+r/yo/nf8cP5VgFT+45Tc/lWAVP7jfNz+VYBU/uOU3P8I9Qj+Nhgw/lWAVP7jlNz+n/yY/p/8mP7VcNT+NOQ0/w29DP405DT+W7xU/wS9BP5bvFT/BL0E/kvwRP7mdOD+S/BE/uZ04P8E3QT+O0Q0/wTdBP47RDT+VgxQ/uPw3P5RJFD+93Dw/lEkUP73cPD+5/zg/iv8JP7n/OD+K/wk/lD0UP8CBPz+UPRQ/wIE/P8D/Pz+K/wk/tv81P4r/CT+//z4/iv8JP5LwET+7Ozs/kvARP7s7Oz+8/zs/iv8JP5RJFD+93Dw/lEkUP73cPD+5/zg/jP8LP7n/OD+M/ws/lD0UP8CBPz+UPRQ/wIE/P8D/Pz+M/ws/tv81P4z/Cz+//z4/jP8LP5LwET+7Ozs/kvARP7s7Oz+8/zs/jP8LP5L8ET+5nTg/kvwRP7mdOD/BN0E/kGIQP8E3QT+QYhA/lYMUP7j8Nz+1XDU/kfoQP8NvQz+R+hA/lu8VP8EvQT+W7xU/wS9BP71vPT+QYhA/kskRP8SqQz+SyRE/xKpDP7TNMz+QYhA/jQANP8HQQD+5vzg/kGIQP7m/OD+QYhA/tf80P4z/Cz+S1RE/wQxBP5LVET/BDEE/vf88P4z/Cz+9bz0/jtENP5LJET/EqkM/kskRP8SqQz+0zTM/jtENP40ADT/B0EA/ub84P47RDT+5vzg/jtENP7X/ND+K/wk/ktURP8EMQT+S1RE/wQxBP73/PD+K/wk/uP83P4r/CT+4/zc/iv8JP497Dz+/az8/u/86P4r/CT+7/zo/iv8JP5CHDz+9xjw/uP83P4z/Cz+4/zc/jP8LP497Dz+/az8/u/86P4z/Cz+7/zo/jP8LP5CHDz+9xjw/jRkNP7tKOz+7gzo/kGIQP79TPz+QYhA/jRkNP7tKOz+7gzo/jtENP79TPz+O0Q0/"),
"format": 34359742487,
"index_count": 378,
"index_data": PackedByteArray("AwAdAAgAAwAIAAAADAARAAYADAAGAAIAAQAJABQAAQAUAAsAFQAKACAAFQAgABkANQAoAB4AQAAxACkAQAApADwAPQAqADgAPQA4AEMASgA+ADoASgA6AEYARwA7AEIARwBCAE4ATABIAFQATABUAGEASQBPAF8ASQBfAFUAXAAEAFMAYwAzAHMAYwBzAGgAbQBNAGIAbQBiAGYAZQBwAHUAZQB1AGoAgQBuAGcAgQBnAGsAewB2AHIAewByAHkAeABxADIAeAAyAEEAggB8AHoAggB6AG8AbAB3AD8AbAA/AEsAhgCAAH0AhgB9AIMAfgCMAHYAfgB2AHsAhACBAGsAhABrAIkAUQBFAH8AUQB/AIUAUACEAIkAUACJAGAAaQB0AIoAaQCKAIcAiACLADcAiAA3AF4ARAA5AIwARACMAH4AXQA2AB8AXQAfAAUAJgAiACwAIQAlABsAMAA0AGQAMABkAFsAVwAHABIADQAWABwADQAcABMAlACPAJcAlACXAKMAmQCNAJEAmQCRABAAjgCaAJ0AjgCdAJYAnAAYAJ8AnACfAJUArACiAC8AsgCuAC4AsgAuAKcArQC3AKkArQCpAC0AwAC8ALAAwACwALQAuwDEALgAuwC4AK8AvgDNAFkAvgBZALoAuQBYAMYAuQDGAMMAyQBaAJMAywDOANkAywDZAKUA1wDQAMwA1wDMAL0A0QDTAN4A0QDeANwA7ADSAM8A7ADPANYA5gDhANoA5gDaAN0A4gCxAKYA4gCmANsA6wDVAOAA6wDgAOUA2AC/ALMA2ACzAOMA7QDqAOQA7QDkAOcA6QDmAN0A6QDdAPMA7wDwANIA7wDSAOwAwQDuAOgAwQDoALUAwgDFAPAAwgDwAO8A1ADyAPUA1AD1AN8A8QDHAKoA8QCqAPQAtgDpAPMAtgDzAKgAyACSAKEAyAChAKsAIwArAJ4AoAAaACQAJwBSAMoAJwDKAKQAVgAPAJAAmAAOABcAmAAXAJsA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 246,
"vertex_data": PackedByteArray("7n6CvSKrl7x8tIe97n6CvSKrl7x8tIe97n6CvSKrl7x8tIe9JCTbvGzQmLxfRrs8JCTbvGzQmLxfRrs8JCTbvGzQmLxfRrs8JCTbvGzQmLxfRrs8JCTbvGzQmLxfRrs87n6CvULMmzx8tIe97n6CvULMmzx8tIe97n6CvULMmzx8tIe9IgHzvDafl7ySYL+9IgHzvDafl7ySYL+9IgHzvDafl7ySYL+9NnlSu5bHm7x6/368NnlSu5bHm7x6/368NnlSu5bHm7x6/368NnlSu5bHm7x6/368NnlSu5bHm7x6/368NnlSu5bHm7x6/368IgHzvFbAmzySYL+9IgHzvFbAmzySYL+9IgHzvFbAmzySYL+9r3FWu/emnjxHbYC8r3FWu/emnjxHbYC8r3FWu/emnjxHbYC8r3FWu/emnjxHbYC8r3FWu/emnjxHbYC8r3FWu/emnjxHbYC8pK3bvFw4nDwZLbs8pK3bvFw4nDwZLbs8pK3bvFw4nDwZLbs8pK3bvFw4nDwZLbs8pK3bvFw4nDwZLbs8pK3bvFw4nDwZLbs8QMCVOCKotjwWe7c8QMCVOCKotjwWe7c8QMCVOCKotjwWe7c8QMCVOCKotjwWe7c8hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno9hhQau6nmhjxVYno92to5vO68gDzrqcc92to5vO68gDzrqcc92to5vO68gDzrqcc92to5vO68gDzrqcc95tP+vBb1RjxqjMI85tP+vBb1RjxqjMI85tP+vBb1RjxqjMI85tP+vBb1RjxqjMI85tP+vBb1RjxqjMI8YF7MvDSVRDzYMnY9YF7MvDSVRDzYMnY9YF7MvDSVRDzYMnY9YF7MvDSVRDzYMnY9dibuvDKRQjyht5c9dibuvDKRQjyht5c9dibuvDKRQjyht5c9dibuvDKRQjyht5c9HG4LvdhLQjw4dVA9HG4LvdhLQjw4dVA9HG4LvdhLQjw4dVA9HG4LvdhLQjw4dVA9R7POvHkUPrw6OnU9R7POvHkUPrw6OnU9R7POvHkUPrw6OnU9R7POvHkUPrw6OnU98C/zvKqtObwnaZg98C/zvKqtObwnaZg98C/zvKqtObwnaZg98C/zvKqtObwnaZg9HG4LvWxOQrw4dVA9HG4LvWxOQrw4dVA9HG4LvWxOQrw4dVA9HG4LvWxOQrw4dVA9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU9hXJPuyKxjrw8gHU902LpvAKEWbxWX70802LpvAKEWbxWX70802LpvAKEWbxWX70802LpvAKEWbxWX70802LpvAKEWbxWX708ImI5vPDYgLyym8c9ImI5vPDYgLyym8c9ImI5vPDYgLyym8c9ImI5vPDYgLyym8c94XZFvfySSLw11do94XZFvfySSLw11do94XZFvfySSLw11do94XZFvfySSLw11do9NnOjvaitQ7yesps9NnOjvaitQ7yesps9NnOjvaitQ7yesps9lFcjvScFRLxT7Z49lFcjvScFRLxT7Z49lFcjvScFRLxT7Z49lFcjvScFRLxT7Z49EBJEvSBiRTyKPNs9EBJEvSBiRTyKPNs9EBJEvSBiRTyKPNs9EBJEvSBiRTyKPNs9NnOjvRSrQzyesps9NnOjvRSrQzyesps9NnOjvRSrQzyesps9YGEivdo9QzysD589YGEivdo9QzysD589YGEivdo9QzysD589YGEivdo9QzysD589DrpJvdSQRDyNAoc9DrpJvdSQRDyNAoc9DrpJvdSQRDyNAoc9og83vaCQRDy+7149og83vaCQRDy+7149og83vaCQRDy+7149DrpJvWiTRLyNAoc9DrpJvWiTRLyNAoc9DrpJvWiTRLyNAoc9og83vTSTRLy+7149og83vTSTRLy+7149og83vTSTRLy+7149l8WMvbatQ7yUuQc9l8WMvbatQ7yUuQc9l8WMvbatQ7yUuQc9l8WMvSKrQzyUuQc9l8WMvSKrQzyUuQc9l8WMvSKrQzyUuQc9wH2CPSKrl7x8tIe9wH2CPSKrl7x8tIe9wH2CPSKrl7x8tIe9ah/bPGzQmLxfRrs8ah/bPGzQmLxfRrs8ah/bPGzQmLxfRrs8ah/bPGzQmLxfRrs8ah/bPGzQmLxfRrs8wH2CPULMmzx8tIe9wH2CPULMmzx8tIe9wH2CPULMmzx8tIe9Z/zyPDafl7ySYL+9Z/zyPDafl7ySYL+9Z/zyPDafl7ySYL+9Z/zyPFbAmzySYL+9Z/zyPFbAmzySYL+9Z/zyPFbAmzySYL+96qjbPFw4nDwZLbs86qjbPFw4nDwZLbs86qjbPFw4nDwZLbs86qjbPFw4nDwZLbs86qjbPFw4nDwZLbs86qjbPFw4nDwZLbs8tVg5PKDXgDy0m8c9tVg5PKDXgDy0m8c9tVg5PKDXgDy0m8c9tVg5PKDXgDy0m8c9vGz9PJYQSDwJpME8vGz9PJYQSDwJpME8vGz9PJYQSDwJpME8vGz9PJYQSDwJpME8vGz9PJYQSDwJpME8bVvMPK2QRDwJMHY9bVvMPK2QRDwJMHY9bVvMPK2QRDwJMHY9bVvMPK2QRDwJMHY9nf/tPH5dQjxIoZc9nf/tPH5dQjxIoZc9nf/tPH5dQjxIoZc9nf/tPH5dQjxIoZc9vWsLPdhLQjw4dVA9vWsLPdhLQjw4dVA9vWsLPdhLQjw4dVA9vWsLPdhLQjw4dVA9LNTOPPumPbyDSXU9LNTOPPumPbyDSXU9LNTOPPumPbyDSXU9LNTOPPumPbyDSXU9OtzyPFhCOrwGXJg9OtzyPFhCOrwGXJg9OtzyPFhCOrwGXJg9OtzyPFhCOrwGXJg9vWsLPWxOQrw4dVA9vWsLPWxOQrw4dVA9vWsLPWxOQrw4dVA9vWsLPWxOQrw4dVA9N2zwPOYYU7yMLb08N2zwPOYYU7yMLb08N2zwPOYYU7yMLb08N2zwPOYYU7yMLb08N2zwPOYYU7yMLb08TtE5PD2+gLzpqcc9TtE5PD2+gLzpqcc9TtE5PD2+gLzpqcc9TtE5PD2+gLzpqcc9VXRFPSCTSLw01do9VXRFPSCTSLw01do9VXRFPSCTSLw01do9VXRFPSCTSLw01do9SHOjPVitQ7yLsps9SHOjPVitQ7yLsps9SHOjPVitQ7yLsps97toiPfKJQ7wQ+5497toiPfKJQ7wQ+5497toiPfKJQ7wQ+5497toiPfKJQ7wQ+549fw9EPVBiRTyIPNs9fw9EPVBiRTyIPNs9fw9EPVBiRTyIPNs9fw9EPVBiRTyIPNs9SHOjPcSqQzyLsps9SHOjPcSqQzyLsps9SHOjPcSqQzyLsps9mF8iPSk9Qzx3D589mF8iPSk9Qzx3D589mF8iPSk9Qzx3D589mF8iPSk9Qzx3D589rrdJPdaQRDyNAoc9rrdJPdaQRDyNAoc9rrdJPdaQRDyNAoc9RQ03PZ+QRDy+7149RQ03PZ+QRDy+7149RQ03PZ+QRDy+7149rrdJPWqTRLyNAoc9rrdJPWqTRLyNAoc9rrdJPWqTRLyNAoc9RQ03PTOTRLy+7149RQ03PTOTRLy+7149RQ03PTOTRLy+7149XMSMPeStQ7yCuQc9XMSMPeStQ7yCuQc9XMSMPeStQ7yCuQc9XMSMPVCrQzyCuQc9XMSMPVCrQzyCuQc9XMSMPVCrQzyCuQc96ST9fwKAAIACAETEAID8/wCAAQD+/4PS6ST9fwKAAIB7VEJM38eJmQAAgyz//72pAIABAP7/g9I0hUYInvtoyekk/X8CgACAAgBExACA/P8BgPz//f97rQIARMQAgPz/AIABAP7/g9L+/zxa/H8AgAEAO1oCgACAynpACGEEackCgAAAAAB6rQCAAQD+/4PSNIVGCJ77aMn+/zxa/H8AgAIARMQAgPz/AYD8//3/e63+/zxa/H8AgAEAO1oCgACAA4D6/wIAg9IBgPz//f97rQOA+v8CAIPSAYD8//3/e63+/zxa/H8AgOkk/X8CgACAiFNusZvFQucAAIMs//+9qQGA/P/9/3utAYD8//3/e60WgRD3af4Q0+p+DveYARDTA4D6/wIAg9IBgPz//f97rRaBEPdp/hDT9yL+fwAAg+6IU26xm8VC57VfzeVM0drLv21c6e7YL8fqfg73mAEQ0xaBEPdp/hDTPpJZ6RAnLscLn1jlYy67y3esbLFlOkTnBN3/f/7/gu61X83lhtHgy5BsYPZ/3DrFW5r/f/7/Lc0E3f9//v+C7ohTbrGbxULnAACDLP//vakAABgZ//9ys75tW+nr2C/HAID9/+/k/r8AAGpj//9JjrM6/n8AAKXitl/N5RjR1cu9bVrp79gwxwAAamP//0mOAADmHv//i7C1X83latHdy49sX/aD3DrFszr+fwAApeK/bVzp7tgvxwCA/f/v5P6/5Z7/f/7/cs8AAGpj//9JjrM6/n8AAKXitl8wGhnRKbS9baMW79jNuAAAamP//0mOAADmHv//i7C2XzEabNEgtI1soQmD3MO6szr+fwAApeK+baMW7djOuACAAADx5P+/5Z7/f/7/cs/3Iv5/AACD7ntUQkzfx4mZtV8yGkzRI7S+baMW7djOuMp6QAhhBGnJNIVGCJ77aMlBkqIWFCfOuA2fpBpiLkK0g6tCTB84iZkE3f9//v+C7ntUQkzfx4mZAACDLP//vakAABgZ//9ys71toxbs2M64AIAAAPHk/7+2XzEaiNEetI1soQl/3MO6W5r/f/7/Lc0E3f9//v+C7h8//n8AAG/gj2ygCXrcw7oAgAAA8eT/v1ua/3/+/y3NAABqY///SY4fP/5/AABv4ACAAADx5P+/AADmHv//i7CPbKAJfNzDugCAAADx5P+//v+zugAApeIfP/5/AABv4JBsX/Z73DrFAID9/+/k/r9bmv9//v8tzQAAamP//0mOHz/+fwAAb+AAgP3/7+T+vwAA5h7//4uwkGxg9n3cOsUAgP3/7+T+v/7/s7oAAKXiAID9/+/k/r/+/7O6AACl4mvj/3/+/7XxAID9/+/k/r/lnv9//v9yz2vj/3/+/7XxAIAAAPHk/7/+/7O6AACl4mvj/3/+/7XxAIAAAPHk/7/lnv9//v9yz2vj/3/+/7XxAABqY///SY4AABgZ//9yswCAAADx5P+/AABqY///SY4AABgZ//9yswCA/f/v5P6/AoAAAAAAeq3+/0HE/3/+/xbb/38CgACAynpACGEEackCgAAAAAB6rf7/eNMAAELWg6tCTB84iZkW2/9/AoAAgAOA+v8CAIPS/v9BxP9//v8W2/9/AoAAgAEAO1oCgACAAoAAAAAAeq3+/0HE/3/+/wEAO1oCgACAA4D6/wIAg9L+/0HE/3/+/+p+DveYARDTA4D6/wIAg9IDgPr/AgCD0v7/eNMAAELWd6xssWU6ROcW2/9/AoAAgPci/n8AAIPuoWX+fwAALs1sk1/2fSM6xWug3uV/LuLL/X/6/w8b/r8/kl/pEicvx/7/5OYAAIzM/v940wAAQtZ3rGyxZTpE50GScukTJzHHP5915aQuuMtKxf9//v+k4v7/kpwAALXxcJNg9nsjOsUDoKzlgC7Yy/7/FeEAAHPP/v+SnAAAtfEXYf5/AABzz/1/+v8PG/6/PpJZ6RAnLsdKxf9//v+k4kKSixYVJ8y4P5+KGqUuRbRKxf9//v+k4v7/kpwAALXxc5OhCX8jwroEoFAafy4ltP7/FeEAAHPP/v+SnAAAtfEXYf5/AABzzwCAAQAQG/+/QZKiFhQnzrhKxf9//v+k4gCAAQAQG/+/QZKdFhYnzrj+/+TmAACMzP7/eNMAAELWg6tCTB84iZn3Iv5/AACD7qFl/n8AAC7NcpOhCYEjwrptoCAagS4btKFl/n8AAC7NAIABABAb/79sk6AJhCPEut3A/3/+/27gAIABABAb/7/dwP9//v9u4P7/kpwAALXxAABKRf//WZ0AgAEAEBv/v3GToQmEI8O6/v8V4QAAc8+hZf5/AAAuzf1/+v8PG/6/bJNf9oMjOsXdwP9//v9u4P1/+v8PG/6/3cD/f/7/buD+/5KcAAC18QAASkX//1md/X/6/w8b/r9tk1/2gCM6xf7/FeEAAHPPkhz+fwAAtvEAAEpF//9Znf1/+v8PG/6/khz+fwAAtvEXYf5/AABzz/1/+v8PG/6/khz+fwAAtvEAAEpF//9ZnQCAAQAQG/+/khz+fwAAtvEXYf5/AABzzwCAAQAQG/+/AIABABAb/7/+/+TmAACMzP7/kpwAALXx/X/6/w8b/r/+/+TmAACMzP7/kpwAALXx")
}]

[sub_resource type="ArrayMesh" id="ArrayMesh_nqr2o"]
_surfaces = [{
"aabb": AABB(-0.0688799, -0.0218105, -0.10026, 0.136555, 0.044125, 0.208844),
"attribute_data": PackedByteArray("xnpGP437DD+cQRw/oYAgP5xBHD+hgCA/xnpGP437DD+h/yA/nsodP6H/ID+eyh0/vzs/P437DD+/Oz8/jfsMP6H/ID+YXhg/of8gP5heGD+4Cjg/jfsMP7gKOD+N+ww/nEEcP5aoFT+cQRw/lqgVP5xBHD+WqBU/scswP437DD+xyzA/jfsMP6v/Kj+Z/xg/q/8qP53/HD+VjhQ/h3UHP7L/MT+L/wo/tv81P4v/Cj+frR4/nGwcP5+tHj+cbBw/sv8xP4v/Cj+cQRw/ngkeP5xBHD+eCR4/tv81P4v/Cj+2/zU/i/8KP7b/NT+L/wo/n60eP5q8GT+frR4/mrwZP7L/MT+L/wo/nEEcP5gfGD+cQRw/mB8YP7b/NT+L/wo/mtYZP5xsHD+a1hk/nGwcP7L/MT+L/wo/sv8xP4v/Cj+a1hk/mrwZP5rWGT+avBk/sv8xP4v/Cj+2/zU/i/8KP9SBUz+N+ww/lM0TP6GAID+UzRM/oYAgP9SBUz+N+ww/28BaP437DD/bwFo/jfsMP48PDz+eyh0/jw8PP57KHT/i8WE/jfsMP+LxYT+N+ww/jw8PP5heGD+PDw8/mF4YP+kwaT+N+ww/6TBpP437DD+UzRM/lqgVP5TNEz+WqBU/lM0TP5aoFT/N/kw/jFsMP5gHGD+eAB4/mAcYP54AHj+YBxg/ngAeP5gHGD+eAB4/zf5MP4xbDD+r/yo/mf8YP5gHGD+FugQ/mAcYP4W6BD+n/yY/mf8YP5yBGz+HdQc/p/8mP53/HD+r/yo/mf8YP5FiET+cbBw/kWIRP5xsHD+y/zE/i/8KP7L/MT+L/wo/sv8xP4v/Cj+UzRM/ngkeP5TNEz+eCR4/tv81P4v/Cj+RYhE/mrwZP5FiET+avBk/sv8xP4v/Cj+2/zU/i/8KP7L/MT+L/wo/lM0TP5gfGD+UzRM/mB8YP7b/NT+L/wo/sv8xP4v/Cj+2/zU/i/8KP5Y5Fj+cbBw/ljkWP5xsHD+2/zU/i/8KP7b/NT+L/wo/ljkWP5q8GT+WORY/mrwZP5gHGD+XwhY/mAcYP5fCFj+YBxg/l8IWP5gHGD+XwhY/mAcYP5fCFj+YBxg/l8IWP5gHGD+XwhY/q/8qP6f/Jj/qMWo/jJwLP5RTFD+VHRU/lFMUP5UdFT+UUxQ/lR0VP5RTFD+VHRU/nLsbP5UdFT+cuxs/lR0VP5y7Gz+VHRU/nLsbP5UdFT+wyy8/jJwLP6v/Kj+n/yY/mAcYP4/4Dj+YBxg/j/gOP5gHGD+P+A4/xnpGP5CtDz+cQRw/oYAgP5xBHD+hgCA/xnpGP5CtDz+h/yA/nsodP6H/ID+eyh0/vzs/P5CtDz+/Oz8/kK0PP6H/ID+YXhg/of8gP5heGD+4Cjg/kK0PP7gKOD+QrQ8/nEEcP5aoFT+cQRw/lqgVP5xBHD+WqBU/scswP5CtDz+xyzA/kK0PP83+TD+QTRA/mAcYP54AHj+YBxg/ngAeP5gHGD+eAB4/mAcYP54AHj/N/kw/kE0QP6f/Jj+Z/xg/mAcYP4W6BD+YBxg/hboEP6v/Kj+Z/xg/p/8mP5n/GD+n/yY/nf8cP5WOFD+HdQc/sv8xP4j/Bz+2/zU/iP8HP5+tHj+cbBw/n60eP5xsHD+y/zE/iP8HP5xBHD+eCR4/nEEcP54JHj+2/zU/iP8HP7b/NT+I/wc/tv81P4j/Bz+frR4/mrwZP5+tHj+avBk/sv8xP4j/Bz+cQRw/mB8YP5xBHD+YHxg/tv81P4j/Bz+a1hk/nGwcP5rWGT+cbBw/sv8xP4j/Bz+y/zE/iP8HP5rWGT+avBk/mtYZP5q8GT+y/zE/iP8HP7b/NT+I/wc/1IFTP5CtDz+UzRM/oYAgP5TNEz+hgCA/1IFTP5CtDz/bwFo/kK0PP9vAWj+QrQ8/jw8PP57KHT+PDw8/nsodP+LxYT+QrQ8/4vFhP5CtDz+PDw8/mF4YP48PDz+YXhg/6TBpP5CtDz/pMGk/kK0PP5TNEz+WqBU/lM0TP5aoFT+UzRM/lqgVP5yBGz+HdQc/q/8qP53/HD+n/yY/mf8YP5FiET+cbBw/kWIRP5xsHD+y/zE/iP8HP7L/MT+I/wc/sv8xP4j/Bz+UzRM/ngkeP5TNEz+eCR4/tv81P4j/Bz+RYhE/mrwZP5FiET+avBk/sv8xP4j/Bz+2/zU/iP8HP7L/MT+I/wc/lM0TP5gfGD+UzRM/mB8YP7b/NT+I/wc/sv8xP4j/Bz+2/zU/iP8HP5Y5Fj+cbBw/ljkWP5xsHD+2/zU/iP8HP7b/NT+I/wc/ljkWP5q8GT+WORY/mrwZP5gHGD+XwhY/mAcYP5fCFj+YBxg/l8IWP5gHGD+XwhY/mAcYP5fCFj+YBxg/l8IWP5gHGD+XwhY/p/8mP6f/Jj/qMWo/kQwRP5RTFD+VHRU/lFMUP5UdFT+UUxQ/lR0VP5RTFD+VHRU/nLsbP5UdFT+cuxs/lR0VP5y7Gz+VHRU/sMsvP5EMET+n/yY/p/8mP5gHGD+P+A4/mAcYP4/4Dj8="),
"format": 34359742487,
"index_count": 348,
"index_data": PackedByteArray("FgAFAAEAFgABABkAHgAJAAQAHgAEABcAIQAMAAgAIQAIAB8AKABmAA0AKAANACIAJQBBAGcAJQBnACkAGgACAEAAGgBAACQASgBQAC4ASgAuADMAUgBLADIAUgAyADcAWABTADYAWAA2ADwAYQBXADsAYQA7AGQAXABgAGMAXABjAD4ATwBdAD8ATwA/AC0ARQBHAG8ARQBvAHYARAB1AGwARABsABMADgBoAHIAOgBrAGIAcQBlAG4AcABtAHcAmACbAHkAmAB5AH0AoACZAHwAoAB8AIEAowChAIAAowCAAIQAqgCkAIUAqgCFAN4ApwCrAN8ApwDfAI0AnACmAIwAnACMAHoAwgC1ALAAwgCwAMgAygC5ALQAygC0AMMA0AC+ALgA0AC4AMsA2QDcAL0A2QC9AM8A1ACKANsA1ADbANgAxwCvAIsAxwCLANUAkQDtAOgAkQDoAL8AkACVAOUAkADlAOwAhgDpAOAAvADaAOMA5wDkAN0A6ADtAOYADwCHAIIADwCCAAoAWgDSANYAWgDWAF4AIwClAKwAIwCsACoATgDGANMATgDTAFsARgCSAMAARgDAAEgAAAB4AIkAAACJAD0AGACaAJcAGACXABUALACuALMALACzADEAaQDhAJMAaQCTABEAFACWAJ4AFACeABwAMACyALYAMAC2ADQAOAC6AOIAOADiAGoAHQCfAKIAHQCiACAANQC3ALsANQC7ADkAcwDqAIgAcwCIABAAXwDXAM4AXwDOAFYAKwCtAKkAKwCpACcASQDBAOsASQDrAHQAJgCoAJ0AJgCdABsAQgCOALEAQgCxAC8ATADEAMkATADJAFEAEgCUAI8AEgCPAEMAVQDNAMUAVQDFAE0ABgB+AHsABgB7AAMAWQDRAMwAWQDMAFQACwCDAH8ACwB/AAcA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 238,
"vertex_data": PackedByteArray("93boPP75Q7wCWN4993boPP75Q7wCWN4993boPP75Q7wCWN4993boPP75Q7wCWN49DZmKPaetQ7yMOLM9DZmKPaetQ7yMOLM9DZmKPaetQ7yMOLM9DZmKPaetQ7yMOLM9DZmKPaetQ7z1kig9DZmKPaetQ7z1kig9DZmKPaetQ7z1kig9DZmKPaetQ7z1kig9ne0GPWLNWbybQbg8ne0GPWLNWbybQbg8ne0GPWLNWbybQbg8ne0GPWLNWbybQbg8ne0GPWLNWbybQbg80On+vFkLmrxo1JW90On+vFkLmrxo1JW90On+vFkLmrxo1JW9nFAoPbmTRLx1DY49nFAoPbmTRLx1DY49nFAoPbmTRLx1DY49nFAoPbmTRLx1DY49NW/qPFhAQ7wnvJ89NW/qPFhAQ7wnvJ89NW/qPFhAQ7wnvJ89NW/qPFhAQ7wnvJ8902EjPbqTRLxxtGk902EjPbqTRLxxtGk902EjPbqTRLxxtGk902EjPbqTRLxxtGk9Muf6PPhNQry0uk89Muf6PPhNQry0uk89Muf6PPhNQry0uk89Muf6PPhNQry0uk89t9yePDzjQ7wRwpI9t9yePDzjQ7wRwpI9t9yePDzjQ7wRwpI9t9yePDzjQ7wRwpI9jEqVPJrwRbxJE3I9jEqVPJrwRbxJE3I9jEqVPJrwRbxJE3I9jEqVPJrwRbxJE3I94xT8vDX2Q7w+Yd494xT8vDX2Q7w+Yd494xT8vDX2Q7w+Yd494xT8vDX2Q7w+Yd49D5mKvbytQ7yGOLM9D5mKvbytQ7yGOLM9D5mKvbytQ7yGOLM9D5mKvbytQ7yGOLM95hCNvbutQ7ysFDE95hCNvbutQ7ysFDE95hCNvbutQ7ysFDE95hCNvbutQ7ysFDE9OyILvat0Vrxtnb48OyILvat0Vrxtnb48OyILvat0Vrxtnb48OyILvat0Vrxtnb48OyILvat0Vrxtnb48Y+w+unKHgLwz8bk9Y+w+unKHgLwz8bk9Y+w+unKHgLwz8bk9Y+w+unKHgLwz8bk9Y+w+unKHgLwz8bk9Y+w+unKHgLwz8bk9S9DTOYgVl7z5VM29S9DTOYgVl7z5VM29S9DTOYgVl7z5VM29S9DTOYgVl7z5VM29tbL1PFkLmrzo5Zq9tbL1PFkLmrzo5Zq9tbL1PFkLmrzo5Zq9nlIovbmTRLx1DY49nlIovbmTRLx1DY49nlIovbmTRLx1DY49nlIovbmTRLx1DY49qN36vIA3Q7ydu589qN36vIA3Q7ydu589qN36vIA3Q7ydu589qN36vIA3Q7ydu5891WMjvbqTRLxxtGk91WMjvbqTRLxxtGk91WMjvbqTRLxxtGk91WMjvbqTRLxxtGk9N+v6vPhNQry0uk89N+v6vPhNQry0uk89N+v6vPhNQry0uk89N+v6vPhNQry0uk89z9GevFaXQ7zam5I9z9GevFaXQ7zam5I9z9GevFaXQ7zam5I9z9GevFaXQ7zam5I9HFKdvC6fR7xRjmk9HFKdvC6fR7xRjmk9HFKdvC6fR7xRjmk9HFKdvC6fR7xRjmk94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI94MN/Ok0Io7w3chI9zur8vPJ3nbxYV688zur8vPJ3nbxYV688zur8vPJ3nbxYV688zur8vPJ3nbxYV688zur8vPJ3nbxYV688zur8vPJ3nbxYV688yejzPBv/oLyraJ08yejzPBv/oLyraJ08yejzPBv/oLyraJ08yejzPBv/oLyraJ08yejzPBv/oLyraJ08yejzPBv/oLyraJ08AACBtdirsrx0NrO8AACBtdirsrx0NrO8AACBtdirsrx0NrO893boPGr3QzwCWN4993boPGr3QzwCWN4993boPGr3QzwCWN4993boPGr3QzwCWN49DZmKPROrQzyMOLM9DZmKPROrQzyMOLM9DZmKPROrQzyMOLM9DZmKPROrQzyMOLM9DZmKPROrQzz1kig9DZmKPROrQzz1kig9DZmKPROrQzz1kig9DZmKPROrQzz1kig9HT4HPdrsWTwI67g8HT4HPdrsWTwI67g8HT4HPdrsWTwI67g8HT4HPdrsWTwI67g8HT4HPdrsWTwI67g844M/upCEgDxo8bk944M/upCEgDxo8bk944M/upCEgDxo8bk944M/upCEgDxo8bk944M/upCEgDxo8bk944M/upCEgDxo8bk9RdDTOag2mzz5VM29RdDTOag2mzz5VM29RdDTOag2mzz5VM29RdDTOag2mzz5VM290On+vHksnjxo1JW90On+vHksnjxo1JW90On+vHksnjxo1JW9nFAoPSWRRDx1DY49nFAoPSWRRDx1DY49nFAoPSWRRDx1DY49nFAoPSWRRDx1DY49knDqPBQ9QzwJvJ89knDqPBQ9QzwJvJ89knDqPBQ9QzwJvJ89knDqPBQ9QzwJvJ8902EjPSaRRDxxtGk902EjPSaRRDxxtGk902EjPSaRRDxxtGk902EjPSaRRDxxtGk9Muf6PGRLQjy0uk89Muf6PGRLQjy0uk89Muf6PGRLQjy0uk89Muf6PGRLQjy0uk89zs2ePLqUQzzam5I9zs2ePLqUQzzam5I9zs2ePLqUQzzam5I9zs2ePLqUQzzam5I95siTPOjERzy3bHI95siTPOjERzy3bHI95siTPOjERzy3bHI95siTPOjERzy3bHI94xT8vKHzQzw+Yd494xT8vKHzQzw+Yd494xT8vKHzQzw+Yd494xT8vKHzQzw+Yd49D5mKvSirQzyGOLM9D5mKvSirQzyGOLM9D5mKvSirQzyGOLM9D5mKvSirQzyGOLM95hCNvSerQzysFDE95hCNvSerQzysFDE95hCNvSerQzysFDE95hCNvSerQzysFDE9Em0Lvf5VVjwQWr88Em0Lvf5VVjwQWr88Em0Lvf5VVjwQWr88Em0Lvf5VVjwQWr88Em0Lvf5VVjwQWr88tbL1PHksnjzo5Zq9tbL1PHksnjzo5Zq9tbL1PHksnjzo5Zq9nlIovSWRRDx1DY49nlIovSWRRDx1DY49nlIovSWRRDx1DY49nlIovSWRRDx1DY49Lt/6vHo1Qzy6u589Lt/6vHo1Qzy6u589Lt/6vHo1Qzy6u589Lt/6vHo1Qzy6u5891WMjvSaRRDxxtGk91WMjvSaRRDxxtGk91WMjvSaRRDxxtGk91WMjvSaRRDxxtGk9OOv6vGRLQjy0uk89OOv6vGRLQjy0uk89OOv6vGRLQjy0uk89OOv6vGRLQjy0uk89wOCevKHgQzwTwpI9wOCevKHgQzwTwpI9wOCevKHgQzwTwpI9wOCevKHgQzwTwpI911udvMgNRjy4h2o911udvMgNRjy4h2o911udvMgNRjy4h2o911udvMgNRjy4h2o9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9H7eEOqKxojzsGBM9Swf9vGKFoTy/4688Swf9vGKFoTy/4688Swf9vGKFoTy/4688Swf9vGKFoTy/4688Swf9vGKFoTy/4688Swf9vGKFoTy/46884ufzPJx1pTyoJp484ufzPJx1pTyoJp484ufzPJx1pTyoJp484ufzPJx1pTyoJp484ufzPJx1pTyoJp48AACBtfjMtjx0NrO8AACBtfjMtjx0NrO8c1D+fwAAxdf+fwMADPz/v9aSCQxo87jHiq7+f4su/78AgAEAe/3/vwGAAwC2/gDAiq7+f4su/7/+//5//3/+vwGAAwD9/6PAAYADAP3/kMD+/4ouc9H+v/7//n//f/6/AIADAP7/+MHYjj4Xt+7mx7iWZUy31CvU/v+KLnPR/r/7///AQb1SvAMA+X8DgAGAAwC5OwKAAoAAgAMA/v/CxQAA+n/+//3/AAAzM///Zab+fwEAcv3/vwCAAQBs//+/AAC1ALUA/78AgAAAXvn/v9aSCQxo87fH/v8zM8vM/r8AAPp//v/9/81M/3/MzP+/AYADAP3/esIAgAIA/v9Fwc1M/3/MzP+/AIABAP3/T8PXjj4XTO7jxzGz/3/+/5jZ1pIJDGfztcdMnbYff+Pz0P7/MzPLzP6//f8AgP7//v/Xjj4Xue3fx0ydtR864c7OMbP/f/7/mNn9/wCA/v/+/3NR/n8AAEXXKW0IDIvwtLkAgAMA/v/4wYmv/n+KL/+/AAD6f/7//f9zUf5/AABF1wCAAQD+/0DBAYADAP3/o8AAAPp//v/9/wAAii7//7moAYADALb+AMAAgAEA3f7/vwMAAcGl+FzhAACKLv//uahHaWRMptdbqidxPBcw8F23/n8DAAz8/79zUP5/AADF17NitB/+4EOxKW0IDJDwtLnWkgkMaPO1x0ydth+E4n/Pia/+f4ov/78DALk7AoACgACAAgD+/0DG/n8CAHzz/7/+/0HE/3/+//9/AgB39P+//v9BxP9//v/+/wKABIAAgACAAgD+/0XBAIABAP7/SMD+/0n/AABZwP3/AID+//7/AAAxM///ZqYpbQgMjvC0uQCAAQD9/0/D/v8zM8vM/r8BgAMAB/sAwP5/AQBy/f+/MbP/f/7/mNn9/wCA/v/+/81M/3/MzP+/J3E+FzbwJbcAgAAAXvn/vzGz/3/+/5jZAAD6f/7//f8AADEz//9mprRitB8X3sCxKW0IDJTws7kAAPp//v/9/81M/3/MzP+/s2KzH2HinrAncT4XP/DdtkdpZEym11uqsmK1H6riFrAncT4XOPAYt/9/aA/+//+/2I4/Fy7u48dMnbUfLOCpzriWZUy31CvUAwD5fwOAAYACAADB3PrM4EdpZEym11uqAIACAP7/w8MAgAEA/v//v/9/aA/+//+//n8BAHf4/78AgAEA/v//v/9/aA/+//+/uJZlTLfUK9T9//7AYb5tvf7/AoAEgACAAYACAP3/N8QBgAIAjfcAwACAAQD+//+/c1D+fwAAxdcBgPr/Cfz+v9aS9fNo80S4iq7+f4su/78BgPz/ef3+vwCA/P+2/v6/iq7+f4su/7/+//5//3/+v/9//P/+/6PAAID9//7/br/+/4ouc9H+v/7//n//f/6/AYD6//3/Bb7YjsHou+4XuOCWX7FG0xOr/v+KLnPR/r/9//3A17/dvnNQ/n8AAMXXs2JK4P3gu84pbfbzj/BKxtaS9fNn80e4TJ1J4IXifrCJr/5/ii//vwMAuTsCgAKAAYD7//3/vbkBgPr/efP+v/7/QcT/f/7/AwD5fwOAAYADALk7AoACgACA/P/+/zu6AAD6f/7//f8AALUAtQD/vwGA+/9v/f6/AYD8/2r//r8AADMz//9lpgGA/P9c+f6/1pL182fzRrj+/zMzy8z+vwAA+n/+//3/zUz/f8zM/7//f/z//v96wgGA/P/9/7i+zUz/f8zM/78AgP7//v+uvNeOv+hM7hq4MbP/f/7/mNnWkvXzZ/NIuEudSeCA4wqv/v8zM8vM/r/9/wCA/v/+/9iOv+i77R64TJ1K4D3hL7Exs/9//v+Y2f3/AID+//7/c1H+fwAARdcpbfbzivBJxgGA+v/9/wW+ia/+f4ov/78AAPp//v/9/3NR/n8AAEXXAID9//7/vb7/f/z//v+jwAAA+n/+//3/AACKLv//uagAgPz/tv7+vwCA/P/c/v6/AAAAwbv9EeAAAIou//+5qB5pYLEo1lvWJ3HB6DDwocgBgPr/Cfz+vwGA+v919P6//v9BxP9//v/+/wKABIAAgAGA/P/9/7i+AID9//7/tb/+/zMzy8z+v/3/AID+//7/AAAxM///ZqYpbfbzjPBJxgCA/v/+/668/v9J/wAAWcAAgPz/B/v+vwGA+/9v/f6/MbP/f/7/mNn9/wCA/v/+/81M/3/MzP+/KHHB6Dfw1sgBgPz/XPn+vzGz/3/+/5jZAAD6f/7//f8AADEz//9mprNiSuAV3j3OKW3285HwSsYAAPp//v/9/81M/3/MzP+/smJK4GHiX88occHoP/AgyR5pYLEo1lvWs2JK4Kvi5s8nccDoN/DlyP9/ouz+//+/2I6/6DLuG7hNnUjgLuBUseCWX7FG0xOrAwD5fwOAAYABAP/Ae/7h3x5pYLEo1lvW/3+i7P7//78BgPz//f86vP9//f/+//+//3+i7P7//78AgPz/Z/3+v+CWX7FG0xOr/f//wDnAPL/+/wKABIAAgP5//f/+/zfEAYD6/9P5/r8=")
}]

[node name="Scissors" node_paths=PackedStringArray("open_scissors", "closed_scissors") groups=["Returnable"] instance=ExtResource("1_vpipe")]
collision_mask = 131079
script = ExtResource("2_2idro")
open_scissors = NodePath("Scissors/Open")
closed_scissors = NodePath("Scissors/Closed")
release_mode = 0
ranged_grab_method = 0
second_hand_grab = 1

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1.59184, 0, 0, 0, 1.59184, 0, 0, 0, 1.59184, 0, 0, 0.00795353)
shape = SubResource("BoxShape3D_5js1x")

[node name="Scissors" parent="." index="1" instance=ExtResource("3_lhxqj")]

[node name="Open" parent="Scissors" index="0" node_paths=PackedStringArray("hightlight")]
script = SubResource("GDScript_2b8bq")
hightlight = NodePath("../../XRToolsHighlightVisible/HighlightOpen")

[node name="Closed" parent="Scissors" index="1" node_paths=PackedStringArray("hightlight")]
visible = false
script = SubResource("GDScript_hqj23")
hightlight = NodePath("../../XRToolsHighlightVisible/HighlightClosed")

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1.17782, 0, 0, 0, 1.17782, 0, 0, 0, 1.17782, 0, 0, -0.0438659)
shape = SubResource("BoxShape3D_opagy")

[node name="GrabPointHandLeft" parent="." index="3" instance=ExtResource("5_3ej3m")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0444137, -0.00100973, -0.0195155)

[node name="GrabPointHandRight" parent="." index="4" instance=ExtResource("8_mhrvu")]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0444137, -0.00100973, -0.0195155)

[node name="XRToolsHighlightVisible" type="Node3D" parent="." index="5"]
transform = Transform3D(1.59184, 0, 0, 0, 1.59184, 0, 0, 0, 1.59184, 0, 0, 0)
visible = false
script = ExtResource("6_v7xbm")

[node name="HighlightOpen" type="MeshInstance3D" parent="XRToolsHighlightVisible" index="0"]
transform = Transform3D(0.628204, 0, 0, 0, 0.628204, 0, 0, 0, 0.628204, 0, 0, 0)
mesh = SubResource("ArrayMesh_nt516")
skeleton = NodePath("../../Scissors/Open")
surface_material_override/0 = ExtResource("7_2xj1y")

[node name="HighlightClosed" type="MeshInstance3D" parent="XRToolsHighlightVisible" index="1"]
transform = Transform3D(0.628204, 0, 0, 0, 0.628204, 0, 0, 0, 0.628204, 0, 0, 0)
visible = false
mesh = SubResource("ArrayMesh_nqr2o")
skeleton = NodePath("../../Scissors/Closed")
surface_material_override/0 = ExtResource("7_2xj1y")

[connection signal="action_pressed" from="." to="." method="_on_action_pressed"]
[connection signal="action_released" from="." to="." method="_on_action_released"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="visibility_changed" from="Scissors/Open" to="Scissors/Open" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Scissors/Closed" to="Scissors/Closed" method="_on_visibility_changed"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]

[editable path="Scissors"]
